--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,13 +1,15 @@
+message(STATUS "Configuring util...")
+
 set (util_src 
+  cl_helper.hxx
   common.cxx
   configurations.hxx
   config_factories.cxx
-  image_helpers.cxx 
+  format_exception.hxx
   itk_oriented_ras_image.hxx
+  image_helpers.cxx 
   mesh_helpers.cxx 
 )
 
 add_library(util ${util_src})
 target_link_libraries(util PRIVATE ${LIB_EXTERNAL})
-
-list(APPEND LIB_INTERNAL util)
