--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "greedy"]
 	path = greedy
 	url = https://github.com/jilei-hao/greedy.git
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
