fixed mesh orientation issue

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -12,4 +12,7 @@ set (util_src
 )
 
 add_library(util ${util_src})
-target_link_libraries(util PRIVATE ${LIB_EXTERNAL} nlohmann_json::nlohmann_json)
+target_link_libraries(util PUBLIC ${LIB_EXTERNAL} nlohmann_json::nlohmann_json)
+
+add_executable(image2mesh image_to_mesh.cxx)
+target_link_libraries(image2mesh PRIVATE util)
