--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ set(INTERNAL_INCLUDE_DIRS
 
 set(EXTERNAL_INCLUDE_DIRS 
   ${CMAKE_CURRENT_SOURCE_DIR}/json/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/greedy/src
 )
 
 include_directories(${INTERNAL_INCLUDE_DIRS} ${EXTERNAL_INCLUDE_DIRS})
