--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -7,6 +7,7 @@ set (util_src
 
 add_library(util ${util_src})
 target_link_libraries(util PUBLIC ${LIB_EXTERNAL} nlohmann_json::nlohmann_json)
+target_include_directories(util PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(image2mesh image_to_mesh.cxx)
-target_link_libraries(image2mesh PRIVATE util)
+target_link_libraries(image2mesh PUBLIC util)
