--- a/src/generator/CMakeLists.txt
+++ b/src/generator/CMakeLists.txt
@@ -1,11 +1,16 @@
 # StudyGenAPI 
 set(studygenapi_src 
-  config_factories.cxx
   study_generator.cxx
+  config_factories.cxx
+)
+
+set(studygenapi_include_dir
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}/model_generator
 )
 
 add_library(StudyGenAPI ${studygenapi_src})
-target_include_directories(StudyGenAPI PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(StudyGenAPI PUBLIC ${studygenapi_include_dir})
 target_link_libraries(StudyGenAPI PUBLIC
   ${LIB_INTERNAL}
   ${LIB_EXTERNAL}
